--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-# Ignorar entornos virtuales
 venv/
-.env/
-
-# Ignorar archivos de caché de Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+.DS_Store
+.env
+
 
 # Ignorar configuración de Jupyter y VSCode
 .ipynb_checkpoints/
