arquitectura API rest implementada con postgreesql lista

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-DATABASE_URL=sqlite:///./meddiag.db
+DATABASE_URL=postgresql+psycopg2://meddiag:meddiag@localhost:5432/meddiag
+MODEL_DIR=./saved_models
+API_BASE_URL=http://localhost:8000
+ALLOWED_ORIGINS=*
