--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 streamlit==1.49.1
 streamlit-option-menu==0.4.0
-scikit-learn==1.7.2
+requests==2.32.3
 
+fastapi==0.115.5
+uvicorn==0.32.1
+scikit-learn==1.7.2
 SQLAlchemy==2.0.36
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
